deploy: 512b44cf5da5811e5ced304d3337cd8e089e39b5

--- a/structreshade_1_1api_1_1effect__runtime.html
+++ b/structreshade_1_1api_1_1effect__runtime.html
@@ -3182,7 +3182,7 @@ template&lt;size_t SIZE&gt; </div>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
     <tr><td class="paramname">technique</td><td>Opaque handle to the technique.</td></tr>
-    <tr><td class="paramname">enabled</td><td><code>true</code> to enable the technique, or <code>false</code> to disable it.</td></tr>
+    <tr><td class="paramname">enabled</td><td>Set to <code>true</code> to enable the technique, or <code>false</code> to disable it.</td></tr>
   </table>
   </dd>
 </dl>
