--- a/structreshade_1_1api_1_1device.html
+++ b/structreshade_1_1api_1_1device.html
@@ -1271,6 +1271,7 @@ Public Member Functions</h2></td></tr>
 </div><div class="memdoc">
 
 <p>Gets the handle to the underlying resource the specified resource <em>view</em>  was created for. </p>
+<p>Resource views may be created without a resource in D3D12, which is used to initialize a null descriptor (reading zeroes, writes are discarded). This may therefore return zero for such views. </p>
 
 </div>
 </div>
